# BmsSiteOps

./: .dockerignore  .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  deploy.yml
apps/api/: README.md  composer.json  phpunit.xml
apps/web/: .env.example  README.md  eslint.config.js  package-lock.json  package.json
apps/worker/: .gitignore  README.md  pyproject.toml
apps/worker/app/: __init__.py  config.py  main.py  runner.py
apps/worker/app/ai/: __init__.py  brief_runner.py  embedding.py  embedding_runner.py  litellm_client.py  litellm_embedding_client.py  llm.py  script_runner.py  scripts.py  site_brief.py
apps/worker/app/auth/: __init__.py
apps/worker/app/clients/: bacnet.py  bacnet_bacpypes.py  brief.py  embeddings.py  fox.py  fox_client.py  ingest.py  obix.py  scripts.py  signing.py  trmm.py
apps/worker/app/collectors/: __init__.py  bacnet.py  base.py  niagara.py  trmm.py
apps/worker/app/mcp/: __init__.py  laravel_client.py  server.py  tools.py
apps/worker/app/qa/: __init__.py  endpoints.py
apps/worker/app/remediation/: __init__.py  base.py  dispatcher.py  trmm.py
apps/worker/tests/: __init__.py  test_bacnet_collector.py  test_brief_client.py  test_brief_runner.py  test_collectors.py  test_embedding.py  test_embedding_runner.py  test_embeddings_client.py  test_fox.py  test_health.py  test_llm.py  test_mcp_audit_headers.py  test_mcp_tools.py  test_niagara_collector.py  test_obix.py  test_qa_endpoints.py  test_qa_prompt.py  test_remediation.py  test_runner.py  test_script_runner.py  test_scripts_client.py  test_scripts_generator.py  test_site_brief.py  test_trmm_collector.py  test_verify_signature.py
apps/worker/tests/integration/: __init__.py  conftest.py  test_litellm_live.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md
docs/adr/: 0001-monorepo.md  0002-multi-tenancy-row-level.md  0003-stack-choices.md  0004-public-repo-security.md  0005-license-agpl.md  0006-containerization-patterns.md  0007-deployment-topology.md  0008-timeseries-events-timescaledb.md  README.md
infra/caddy/: Caddyfile  Caddyfile.dev  README.md  mcp-basic-auth.conf  mcp-basic-auth.conf.example
infra/compose/: .env.prod.example  docker-compose.dev.yml  docker-compose.prod.yml
infra/docker/: api.Dockerfile  caddy.Dockerfile  php.ini.production  web.Dockerfile  worker.Dockerfile
infra/litellm/: README.md  config.yaml
infra/scripts/: backup-restore.sh  backup.sh  bootstrap-server.sh  cert-status.sh  deploy.sh  mcp-smoke.py  (+3 more)
(+202 files in other folders)
